--- a/src/Oro/Bundle/IssuesBundle/Resources/views/Issue/update.html.twig
+++ b/src/Oro/Bundle/IssuesBundle/Resources/views/Issue/update.html.twig
@@ -1,14 +1,14 @@
 {% extends 'OroUIBundle:actions:update.html.twig' %}
 {% form_theme form with 'OroFormBundle:Form:fields.html.twig' %}
 
-{% if form.vars.value.id %}
+{% if form.vars.value and form.vars.value.id %}
     {% set formAction = path('oro_issue_update', { 'id': form.vars.value.id }) %}
 {% else %}
     {% set formAction = path('oro_issue_create') %}
 {% endif %}
 
 {% block navButtons %}
-    {% if form.vars.value.id and resource_granted('DELETE', form.vars.value) %}
+    {% if form.vars.value and form.vars.value.id and resource_granted('DELETE', form.vars.value) %}
         {{ UI.deleteButton({
             'dataUrl': path('oro_issues_api_delete_issue', {'id': form.vars.value.id}),
             'dataRedirect': path('oro_issue_index'),
@@ -28,7 +28,7 @@
 {% endblock navButtons %}
 
 {% block pageHeader %}
-    {% if form.vars.value.id %}
+    {% if form.vars.value and form.vars.value.id %}
         {% set breadcrumbs = {
         'entity':      form.vars.value,
         'indexPath':   path('oro_issue_index'),
@@ -51,7 +51,7 @@
         form_row(form.type)
     ] %}
 
-    {% if form.vars.value.id is not null %}
+    {% if form.vars.value and form.vars.value.id is not null %}
         {% set form_fields = form_fields | merge([form_row(form.status)]) %}
     {% endif %}
 
