--- a/src/Oro/Bundle/IssuesBundle/Resources/views/Widget/buttons.html.twig
+++ b/src/Oro/Bundle/IssuesBundle/Resources/views/Widget/buttons.html.twig
@@ -1,10 +1,24 @@
 {% import 'OroUIBundle::macros.html.twig' as UI %}
 
-{% if entity is defined %}
-    <div class="btn-group">
-    {{ UI.addButton({
-        'path': path('oro_issue_create_for_user', { 'assignee': entity.id }),
-        'entity_label': 'oro.issues.assign_ticket'|trans
-    }) }}
-    </div>
-{% endif %}
+{{ UI.clientButton({
+    'dataUrl': path('oro_issue_create' , oro_action_params(entity)),
+    'aCss': 'no-hash',
+    'dataId': entity.id,
+    'label': 'oro.issues.assign_ticket'|trans,
+    'title': 'oro.issues.issue.entity_label'|trans,
+    'widget' : {
+        'type' : 'dialog',
+        'multiple' : true,
+        'options' : {
+            'alias': 'issue-dialog',
+            'dialogOptions' : {
+                'title' : 'oro.issues.issue.create'|trans,
+                'allowMaximize': true,
+                'allowMinimize': true,
+                'dblclick': 'maximize',
+                'maximizedHeightDecreaseBy': 'minimize-bar',
+                'width': 1000
+            }
+        }
+    }
+}) }}
