Fixed latest issues widget to load based on collaborator; added issues on user page.

--- a/src/Oro/Bundle/IssuesBundle/Resources/views/Dashboard/latestIssues.html.twig
+++ b/src/Oro/Bundle/IssuesBundle/Resources/views/Dashboard/latestIssues.html.twig
@@ -2,7 +2,7 @@
 {% import 'OroDataGridBundle::macros.html.twig' as dataGrid %}
 
 {% block content %}
-    {{ dataGrid.renderGrid('latest-issues-grid') }}
+    {{ dataGrid.renderGrid('latest-issues-grid', {'userId' : app.user }) }}
     <script type="text/javascript">
         require(['orocrm/call/info-opener']);
     </script>
