Different fixes on issues grid filtering, update issue and type.

--- a/src/Oro/Bundle/IssuesBundle/Resources/views/Dashboard/latestIssues.html.twig
+++ b/src/Oro/Bundle/IssuesBundle/Resources/views/Dashboard/latestIssues.html.twig
@@ -10,7 +10,7 @@
 
 {% block actions %}
     {% set actions = [{
-        'url': path('oro_issue_index'),
+        'url': path('oro_issue_index', { 'issues-grid': { '_filter': { 'collaborator': { 'value': app.user.id, 'type': '1' } } }}),
         'type': 'link',
         'label': 'oro.issues.latest_issues.view_all'|trans
     }] %}
