OOT-1275: fixes - missing translation - missing breadcrumbs - display extended fields - suntask and parent issue - dialog window fix - other small fixes

--- a/src/Oro/Bundle/IssuesBundle/Resources/views/Issue/index.html.twig
+++ b/src/Oro/Bundle/IssuesBundle/Resources/views/Issue/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'OroUIBundle:actions:index.html.twig' %}
 {% set gridName = 'issues-grid' %}
-{% set pageTitle = 'Issues page title' %}
+{% set pageTitle = 'oro.issues.issue.entity_plural_label'|trans %}
 
 {% block navButtons %}
     {% include 'OroImportExportBundle:ImportExport:buttons.html.twig' with {
