--- a/src/Oro/Bundle/IssuesBundle/Resources/views/Issue/searchResult.html.twig
+++ b/src/Oro/Bundle/IssuesBundle/Resources/views/Issue/searchResult.html.twig
@@ -12,5 +12,5 @@
 
 {% set entityInfo = [
     {'title': 'oro.issues.issue.created_at'|trans, 'value': entity.createdAt ? entity.createdAt|oro_format_datetime : 'N/A'},
-    {'title': 'oro.issues.issue..updated_at'|trans, 'value': entity.updatedAt ? entity.updatedAt|oro_format_datetime : 'N/A'},
+    {'title': 'oro.issues.issue.updated_at'|trans, 'value': entity.updatedAt ? entity.updatedAt|oro_format_datetime : 'N/A'},
 ] %}
