OOT-1275: fixes after review

--- a/src/Oro/Bundle/IssuesBundle/Resources/views/Issue/update.html.twig
+++ b/src/Oro/Bundle/IssuesBundle/Resources/views/Issue/update.html.twig
@@ -53,20 +53,38 @@
 {% endblock pageHeader %}
 
 {% block content_data %}
-    {% set formData = [form_row(form)] %}
-
     {% set id = 'issue-edit' %}
+    {% set form_fields = [
+    form_row(form.summary),
+    form_row(form.code),
+    form_row(form.description),
+    form_row(form.type)
+    ] %}
+
+    {% if form.vars.value and form.vars.value.id is not null %}
+        {% set form_fields = form_fields | merge([form_row(form.status)]) %}
+    {% endif %}
+
+    {% set form_fields = form_fields | merge([
+    form_row(form.priority),
+    form_row(form.assignee),
+    form_row(form.tags)
+    ]) %}
+
     {% set dataBlocks = [{
-        'title': 'General'|trans,
-        'class': 'active',
-        'subblocks': [{'title': '','data': formData}]
-    }] %}
+    'title': 'General'|trans,
+    'class': 'active',
+    'subblocks': [{
+    'title': '',
+    'data': form_fields
+    }]
+    }]
+    %}
     {% set data = {
-        'formErrors': form_errors(form)? form_errors(form) : null,
-        'dataBlocks': dataBlocks,
+    'formErrors': form_errors(form)? form_errors(form) : null,
+    'dataBlocks': dataBlocks,
     } %}
     {{ parent() }}
-    
 {% endblock content_data %}
 
 {% block content %}
